// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<fbt:list> 1`] = `
import { fbt } from "fbtee";
const x = fbt._(
  "Available Locations: {locations}.",
  [fbt._list("locations", ["Tokyo", "London", "Vienna"])],
  {
    hk: "1b9IBP",
  }
);

`;

exports[`<fbt:list> 2`] = `
import { fbt } from "fbtee";
const x = fbt._(
  "Available Locations: {locations}.",
  [fbt._list("locations", ["Tokyo", "London", "Vienna"], "and")],
  {
    hk: "1b9IBP",
  }
);

`;

exports[`<fbt:list> 3`] = `
import { fbt } from "fbtee";
const x = fbt._(
  "Available Locations: {locations}.",
  [fbt._list("locations", ["Tokyo", "London", "Vienna"], null, "bullet")],
  {
    hk: "1b9IBP",
  }
);

`;

exports[`<fbt:list> 4`] = `
import { fbt } from "fbtee";
const x = fbt._(
  "Available Locations: {locations}.",
  [fbt._list("locations", ["Tokyo", "London", "Vienna"], "or", "bullet")],
  {
    hk: "1b9IBP",
  }
);

`;

exports[`fbt.list() 1`] = `
import { fbt } from "fbtee";
fbt._(
  "Available Locations: {locations}",
  [fbt._list("locations", ["Tokyo", "London", "Vienna"], null, "or")],
  {
    hk: "19372u",
  }
);

`;
